syntax = "proto3";

package protos;

option go_package = "github.com/streamdal/snitch-protos/build/go/protos";

message HttpRequest {
  enum Method {
    METHOD_UNSET = 0;
    METHOD_GET = 1;
    METHOD_POST = 2;
    METHOD_PUT = 3;
    METHOD_DELETE = 4;
  }

  Method method = 1;
  string url = 2;
  bytes body = 3;
  map<string,string> headers = 4;
}

message HttpResponse {
  int32 code = 1;
  bytes body = 2;
  map<string,string> headers = 3;
}